# backend/docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /api/v1
 definitions:
   controllers.AcceptInviteReq:
     properties:
@@ -22,6 +23,16 @@ definitions:
         type: integer
     required:
     - stripe_subscription_id
+    type: object
+  controllers.DisableUserRequest:
+    properties:
+      organization_id:
+        type: integer
+      user_id:
+        type: integer
+    required:
+    - organization_id
+    - user_id
     type: object
   controllers.GetProratedCostReq:
     properties:
@@ -57,42 +68,14 @@ definitions:
     - user_id
     type: object
 info:
-  contact: {}
+  contact:
+    name: Haitham
+    url: https://github.com/haitham911/organization-management-app
+  description: Type "Bearer" followed by a space and JWT token.
+  title: organization management
+  version: "1.0"
 paths:
-  /subscriptions/add-seat:
-    post:
-      consumes:
-      - application/json
-      description: Add a user seat to an existing subscription with prorated billing
-      parameters:
-      - description: Add Seat
-        in: body
-        name: subscription
-        required: true
-        schema:
-          $ref: '#/definitions/controllers.AddSeatReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Add a seat to the subscription
-      tags:
-      - subscriptions
-  /subscriptions/organization-info:
+  /organizations/subscription-info:
     get:
       consumes:
       - application/json
@@ -128,6 +111,106 @@ paths:
             additionalProperties: true
             type: object
       summary: Get the number of members and remaining subscriptions for an organization
+      tags:
+      - organizations
+  /subscriptions/accept-invite:
+    post:
+      consumes:
+      - application/json
+      description: Accept an invite and create a user in the organization
+      parameters:
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.AcceptInviteReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Accept an invite to join the organization
+      tags:
+      - subscriptions
+  /subscriptions/add-seat:
+    post:
+      consumes:
+      - application/json
+      description: Add a user seat to an existing subscription with prorated billing
+      parameters:
+      - description: Add Seat
+        in: body
+        name: subscription
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.AddSeatReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Add a seat to the subscription
+      tags:
+      - subscriptions
+  /subscriptions/disable-user:
+    post:
+      consumes:
+      - application/json
+      description: Disable a user and remove their seat from the organization without
+        deleting the user
+      parameters:
+      - description: Disable User
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.DisableUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Disable a user and remove their seat from the organization
       tags:
       - subscriptions
   /subscriptions/prorated-cost:
@@ -196,40 +279,7 @@ paths:
       summary: Remove a user from the organization
       tags:
       - subscriptions
-  /users/accept-invite:
-    post:
-      consumes:
-      - application/json
-      description: Accept an invite and create a user in the organization
-      parameters:
-      - description: body
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/controllers.AcceptInviteReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Accept an invite to join the organization
-      tags:
-      - users
-  /users/send-invite:
+  /subscriptions/send-invite:
     post:
       consumes:
       - application/json
@@ -261,5 +311,10 @@ paths:
             type: object
       summary: Send an invite to a user
       tags:
-      - users
+      - subscriptions
+securityDefinitions:
+  Bearer:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
