# backend/routes/routes.go
@@ -8,21 +8,26 @@ import (
 )
 
 func RegisterOrganizationRoutes(r *gin.RouterGroup) {
-	r.POST("/organizations", controllers.CreateOrganization)
-	r.GET("/organizations", controllers.GetOrganizations)
-	r.GET("/organization-info", controllers.GetOrganizationSubscriptionInfo)
-	r.POST("/send-invite", controllers.SendInvite)
+	organizationRoutes := r.Group("/organizations")
+	{
+		organizationRoutes.POST("", controllers.CreateOrganization)
+		organizationRoutes.GET("", controllers.GetOrganizations)
+		organizationRoutes.GET("/subscription-info", controllers.GetOrganizationSubscriptionInfo)
+	}
 
 }
 func RegisterUserRoutes(r *gin.RouterGroup) {
-	r.Use(middlewares.AuthMiddleware())
-	r.POST("/users", middlewares.AdminOnly(), controllers.CreateUser)
-	r.GET("/users", middlewares.AdminOnly(), controllers.GetUsers)
-	r.POST("/user/free", controllers.CreateUserFreeSubscription)
-	r.POST("/user/subscription", controllers.CreateUserWithSubscription)
-	r.POST("/user/upgrade", controllers.Upgrade)
-	r.POST("/user/downgrade", controllers.Downgrade)
-	r.POST("/accept-invite", controllers.AcceptInvite)
+	userRoutes := r.Group("/users")
+	{
+		userRoutes.Use(middlewares.AuthMiddleware())
+		userRoutes.POST("", middlewares.AdminOnly(), controllers.CreateUser)
+		userRoutes.GET("", middlewares.AdminOnly(), controllers.GetUsers)
+		userRoutes.POST("/user/free", controllers.CreateUserFreeSubscription)
+		userRoutes.POST("/user/subscription", controllers.CreateUserWithSubscription)
+		userRoutes.POST("/user/upgrade", controllers.Upgrade)
+		userRoutes.POST("/user/downgrade", controllers.Downgrade)
+
+	}
 
 }
 func RegisterProductRoutes(r *gin.RouterGroup) {
@@ -30,9 +35,15 @@ func RegisterProductRoutes(r *gin.RouterGroup) {
 	r.GET("/products", controllers.ListProductsWithPrices)
 }
 func RegisterSubscriptionRoutes(r *gin.RouterGroup) {
-	r.POST("/subscriptions", controllers.CreateSubscription)
-	r.GET("/subscriptions", controllers.GetSubscriptions)
-	r.POST("/prorated-cost", controllers.GetProratedCost)
+	subscriptionRoutes := r.Group("/subscriptions")
+	{
+		subscriptionRoutes.POST("", controllers.CreateSubscription)
+		subscriptionRoutes.GET("/subscriptions", controllers.GetSubscriptions)
+		subscriptionRoutes.POST("/prorated-cost", controllers.GetProratedCost)
+		subscriptionRoutes.POST("/send-invite", controllers.SendInvite)
+		subscriptionRoutes.POST("/accept-invite", controllers.AcceptInvite)
+		subscriptionRoutes.POST("/disable-user", controllers.DisableUser)
+	}
 
 }
 func RegisterAuthRoutes(r *gin.RouterGroup) {
